pds/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: pds
    app.kubernetes.io/name: pds
  name: pds
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pds
      app.kubernetes.io/name: pds
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: pds
        app.kubernetes.io/name: pds
    spec:
      containers:
        - image: registry.devops.rivtower.com/web5/rsky:${PDS_VERSION}
          imagePullPolicy: IfNotPresent
          name: pds
          command:
            - /bin/sh
            - -c
            - ./rsky-pds
          ports:
            - containerPort: ${PDS_PORT}
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /pds
              name: pds
        - image: m.daocloud.io/docker.io/postgres:17-bookworm
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
        - image: m.daocloud.io/docker.io/localstack/localstack:latest
          imagePullPolicy: IfNotPresent
          name: localstack
          ports:
            - containerPort: 4566
              name: localstack
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /var/lib/localstack/data
              name: localstack
  volumeClaimTemplates:
    - metadata:
        name: pds
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: database
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 50Gi
    - metadata:
        name: localstack
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 50Gi
