pds/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pds-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/preserve-host: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /handle-redirect
spec:
  ingressClassName: 'nginx'
  rules:
    - host: '*.${PDS_HOSTNAME}'
      http:
        paths:
          - backend:
              service:
                name: pds
                port:
                  number: ${PDS_PORT}
            path: /
            pathType: ImplementationSpecific
            annotations:
              nginx.ingress.kubernetes.io/rewrite-target: /handle-redirect
  tls:
    - hosts:
        - ${PDS_HOSTNAME}
      secretName: web5
